chore: Fix tinylog build problems